--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </select>
 
         <button class="bts" onclick="showArticles()">Show Articles</button>
-        <button class="btn" onclick="showPage('class-page')">Back to Class</button>
+        <button class="btn" onclick="showPage('class-page')">To Class</button>
     </div>
 
     <div id="articles-page" class="container">
