--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <option value="phy102">PHY 102</option>
             <option value="mth102">MTH 102</option>
             <option value="gst112">GST 112</option>
+            <option value="sta102">STA 102</option>
         </select>
 
 
@@ -98,7 +99,7 @@
             <option value="chm102">Chm 102</option>
             <option value="phy102">Phy 102</option>
             <option value="mth102">Mth 102</option>
-            <option value="gst112">Gst112 102</option>
+            <option value="gst112">Gst 112 </option>
         </select>
 
         <button class="btn" onclick="showSyllabus()">Show Syllabus</button>
